data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_2689.wast
;; 10. **Zero Operand Stack Pre `br_table`**:    - Implement a block ensuring the operand stack is cleared before executing a `br_table` instruction. Check if this case handles stack underflow or empty stack states correctly during `br_table` execution.    - **Constraint Checked**: Stack underflow handling in `br_table` without prior operand pushes.

(assert_invalid
  (module (func $zero-operand-stack-br_table
    (block 
      (br_table 0 (i32.const 0))
    )
  ))
  "type mismatch"
)